src/rust/items/snapshots/syn_state_machine__rust__items__type_aliases__tests__it_matches_simple.snap
---
source: src/rust/items/type_aliases.rs
expression: "insta_match_test!(+ parse TypeAlias<Infallible, Type<Infallible>> : type Point\n    ;)"
---
Ok(
    TypeAlias {
        id: Ident(
            Point,
        ),
        generic_parameters: None,
        bounds: None,
        where_clause: None,
        eq: None,
    },
)
